Adding the git ignore and the Initial commit. dictionary.txt.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 Boggle/Debug/
 Boggle/Release/
+Boggle.sln
+Boggle/Boggle.vcproj
+Boggle/Boggle.vcxproj
+Boggle/Boggle.vcxproj.filters
+Boggle/Boggle.vcxproj.user
+Debug/Boggle.exe
+Debug/Boggle.ilk
+Debug/Boggle.pdb
+.vs/Boggle/v14/.suo
+Boggle.VC.VC.opendb
+Boggle.VC.db
+Boggle.ncb
